--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="manifest" href="/manifest.json" zigidhead>
   <link rel="mask-icon" href="fonts/dnUpUsUuM6xP.svg" color="#ff9155" zigidhead>
   <meta name="msapplication-TileColor" content="#ff9155" zigidhead>
-  <meta name="theme-color" coantent="#16081a" zigidhead>
+  <meta name="theme-color" content="#16081a" zigidhead>
   <meta name="referrer" content="strict-origin-when-cross-origin" zigidhead>
   <meta name="view-transition" content="same-origin" zigidhead>
   <!--qvzigid=3 zigidkey=zrbr:35_0-->
@@ -17,6 +17,7 @@
     content="Buy high-quality LoL Boosting. 100% Cheat-free &amp; ensured Safety and Privacy. The Ultimate League of Legends Boost experience. Available on all servers 24/7."
     zigid="5" zigidhead>
   <link rel="stylesheet" href="css/PG53LbHzwqxj.css">
+  <link rel="stylesheet" href="css/style.css">
   <style zigidstyle="lcydw1-0" hidden>
     :root {
       view-transition-name: none
@@ -727,14 +728,19 @@ q-2466fa76.js#_hW[2]" zigid="9">
 
 
             </div>
-            <div class="css-b62m3t-container">
-              <select class="react-select__control css-13cymwt-control">
-                <option value="0-20">0-20 LP</option>
-                <option value="21-40">21-40 LP</option>
-                <option value="41-60">41-60 LP</option>
-                <option value="61-80">61-80 LP</option>
-                <option value="81-100">81-100 LP</option>
-              </select>
+            <div class="  gap-6 mt-6 xl:grid-cols-1 md:gap-2">
+               
+                <div class="select-custom">
+
+                  <select class="form-select form-control" aria-label="Default select example">
+                    <option value="0-20">0-20 LP</option>
+                    <option value="21-40">21-40 LP</option>
+                    <option value="41-60">41-60 LP</option>
+                    <option value="61-80">61-80 LP</option>
+                    <option value="81-100">81-100 LP</option>
+                  </select>
+                </div>
+
             </div>
           </div>
         </div>
@@ -1004,35 +1010,37 @@ q-2466fa76.js#_hW[2]" zigid="9">
 
             </div>
             <div class="grid grid-cols-2 gap-6 mt-6 xl:grid-cols-1 md:gap-2"></div>
-            <div class="flex gap-4 mt-6 md:flex-col">
-              <div class="basis-1/2">
-                <label class="⭐️wah5yh-0 react-select-container flex flex-col gap-2 my-1 groupped">
-                  <select class="⭐️wah5yh-0 react-select__control css-13cymwt-control">
-                    <option >North America</option>
-                    <option >EU-West</option>
-                    <option >EU-Nordic & East</option>
-                    <option >Oceania</option>
-                    <option >Turkey</option>
-                    <option >Russia</option>
-                    <option >Brazil</option>
-                    <option >Latin America North</option>
-                    <option >Latin America South</option>
-                    <option >Korea</option>
-                    <option >Japan</option>
-                    <option >South East Asia</option>
-                    <option >Taiwan</option>
-                    <option >Thailand</option>
-                    <option >Philippines</option>
-                    <option >Japan</option>
-                    <option >Vietnam</option>
-                    <option >Singapore & Malaysia & Indonesia</option>
-                    <option >PBE</option>
-                  </select>
-                </label>
-              </div>
+            <div class="select-custom">
+
+              <select class="form-select form-control" aria-label="Default select example">
+                <option >North America</option>
+                <option >EU-West</option>
+                <option >EU-Nordic & East</option>
+                <option >Oceania</option>
+                <option >Turkey</option>
+                <option >Russia</option>
+                <option >Brazil</option>
+                <option >Latin America North</option>
+                <option >Latin America South</option>
+                <option >Korea</option>
+                <option >Japan</option>
+                <option >South East Asia</option>
+                <option >Taiwan</option>
+                <option >Thailand</option>
+                <option >Philippines</option>
+                <option >Japan</option>
+                <option >Vietnam</option>
+                <option >Singapore & Malaysia & Indonesia</option>
+                <option >PBE</option>
+              </select>
             </div>
+
           </div>
         </div>
+
+
+
+
 
 
       </div>
@@ -1448,21 +1456,20 @@ q-2466fa76.js#_hW[2]" zigid="9">
               </div>
             </div>
             <div class="px-5">
-              <div id="payment-request-button"></div>
-              <!--qv -->
-              <div
-                class="font-bold flex items-center justify-center text-center cursor-pointer text-base whitespace-nowrap duration-300 rounded-3xl leading-tight bg-primary bg-opacity-10 hover:bg-primary hover:text-white border-transparent text-white bg-primary-gradient w-full text-lg leading-7 mt-2 h-10 rounded flex justify-center items-center gap-4 rounded-md"
+              <div id="payment-request-button">
+                <button class="font-bold flex items-center justify-center text-center cursor-pointer text-base whitespace-nowrap duration-300 rounded-3xl leading-tight bg-primary bg-opacity-10 hover:bg-primary hover:text-white border-transparent text-white bg-primary-gradient w-full text-lg leading-7 mt-2 h-10 rounded flex justify-center items-center gap-4 rounded-md"
                 style="padding: 11px 28px; backdrop-filter: blur(8px);">
-                <!--qv -->
-                <!--qv --><span>Rank up now</span>
-                <div class="-rotate-90 pt-2"><svg class="animate-bounce" width="20" height="23" viewBox="0 0 20 23"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M10.8679 22.4373L19.4473 13.858C19.9707 13.3346 19.9707 12.4856 19.4473 11.9622C18.9237 11.4386 18.075 11.4386 17.5514 11.9622L11.2605 18.2531L11.2605 1.34052C11.2605 0.60023 10.6603 -4.0125e-07 9.92003 -4.33609e-07C9.17985 -4.65963e-07 8.57951 0.60023 8.57951 1.34052L8.57951 18.2531L2.28862 11.9624C1.76506 11.4389 0.916355 11.4389 0.392801 11.9624C0.131238 12.2241 0.000190186 12.5673 0.000190171 12.9103C0.000190156 13.2534 0.131238 13.5965 0.392801 13.8582L8.97212 22.4373C9.49568 22.9609 10.3444 22.9609 10.8679 22.4373Z"
-                      fill="#fff"></path>
-                  </svg></div>
+                    <!--qv --><span>Rank up now</span>
+                    <div class="-rotate-90 pt-2"><svg class="animate-bounce" width="20" height="23" viewBox="0 0 20 23"
+                      fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M10.8679 22.4373L19.4473 13.858C19.9707 13.3346 19.9707 12.4856 19.4473 11.9622C18.9237 11.4386 18.075 11.4386 17.5514 11.9622L11.2605 18.2531L11.2605 1.34052C11.2605 0.60023 10.6603 -4.0125e-07 9.92003 -4.33609e-07C9.17985 -4.65963e-07 8.57951 0.60023 8.57951 1.34052L8.57951 18.2531L2.28862 11.9624C1.76506 11.4389 0.916355 11.4389 0.392801 11.9624C0.131238 12.2241 0.000190186 12.5673 0.000190171 12.9103C0.000190156 13.2534 0.131238 13.5965 0.392801 13.8582L8.97212 22.4373C9.49568 22.9609 10.3444 22.9609 10.8679 22.4373Z"
+                        fill="#fff"></path>
+                    </svg></div>
+  
+              </button>
 
-
+                
               </div>
 
             </div>
