--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
               </div>
             </div>
-            <div class="mt-6">
+            <div class="mt-6" id="hide">
               <div class="shrink-0 flex flex-wrap items-start gap-2 xl:w-full">
                 <div
                   id="4" class="font-medium text-xl rounded-lg cursor-pointer py-3 text-center w-14 duration-300 hover:-mt-1 active bg-primary hover:bg-primary/10" clickable="level">IV</div>
